; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39922.c_thread_func.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39922.c_thread_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @thread_func(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %8, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp ne i32 %5, 0
  %7 = xor i1 %6, true
  br i1 %7, label %8, label %10

8:                                                ; preds = %4
  %9 = call i32 @OSSpinLockTry(i32* @lock)
  store i32 %9, i32* %3, align 4
  br label %4

10:                                               ; preds = %4
  %11 = call i32 (...) @make_iokit_call()
  %12 = call i32 @OSSpinLockUnlock(i32* @lock)
  ret i8* null
}

declare dso_local i32 @OSSpinLockTry(i32*) #1

declare dso_local i32 @make_iokit_call(...) #1

declare dso_local i32 @OSSpinLockUnlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
